--- a/homework-eject/package.json
+++ b/homework-eject/package.json
@@ -58,7 +58,6 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
-    "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
     "workbox-webpack-plugin": "^6.4.1"
   },
@@ -140,5 +139,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^4.15.2"
   }
 }
